--- a/FRONTEND/src/src/app/pages/registro/registro.component.html
+++ b/FRONTEND/src/src/app/pages/registro/registro.component.html
@@ -1,48 +1,47 @@
-<body>
-
-    <div class="form">
-      <div class="form-toggle"></div>
-      <div class="form-panel one">
-        <div class="form-header">
-          <button routerLink='' style="border:none; background: white;" >
-            <span class="material-symbols-outlined">
-            arrow_back
-            </span>
-          </button>
-          <h1>Registrate</h1>
-        </div>
-        <div class="form-content">
-          <form>
-            <div class="form-group">
-              <label for="username">Escribe tu nombre</label>
-              <input id="username" type="text" name="username" required="required"/>
-            </div>
-            <div class="form-group">
-              <label for="mail">Escribe tu mail</label>
-              <input id="mail" type="mail" name="mail" required="required"/>
-            </div>
-            <div class="form-group">
-              <label for="contraseña">Escribe tu contraseña</label>
-              <input id="contraseña" type="text" name="contraseña" required="required"/>
-            </div>
-            <div class="form-group">
-              <label for="contraseña">Repite tu contraseña</label>
-              <input id="contraseña" type="contraseña" name="contraseña" required="required"/>
-            </div>
-            <div class="form-group">
-              <label class="form-remember">
-                <input type="checkbox"/>Recuerdame
-              </label><a class="form-recovery" href="#"></a>
-            </div>
-            <div class="form-group">
-              <button type="submit">Registrarme</button>
-              
-            </div>
-          </form>
-        </div>
-      </div>
+<app-navbar></app-navbar>
+<div class="form">
+  <div class="form-toggle"></div>
+  <div class="form-panel one">
+    <div class="form-header">
+      <button routerLink='' style="border:none; background: transparent;" >
+        <span class="material-symbols-outlined">
+        arrow_back
+        </span>
+      </button>
+      <h1>Registrate</h1>
     </div>
-  </body>
+    <div class="form-content">
+      <form>
+        <div class="form-group">
+          <label for="username">Escribe tu nombre</label>
+          <input id="username" type="text" name="username" required="required"/>
+        </div>
+        <div class="form-group">
+          <label for="mail">Escribe tu mail</label>
+          <input id="mail" type="mail" name="mail" required="required"/>
+        </div>
+        <div class="form-group">
+          <label for="contraseña">Escribe tu contraseña</label>
+          <input id="contraseña" type="text" name="contraseña" required="required"/>
+        </div>
+        <div class="form-group">
+          <label for="contraseña">Repite tu contraseña</label>
+          <input id="contraseña" type="contraseña" name="contraseña" required="required"/>
+        </div>
+        <div class="form-group">
+          <label class="form-remember">
+            <input type="checkbox"/>Recuerdame
+          </label><a class="form-recovery" href="#"></a>
+        </div>
+        <div class="form-group">
+          <button type="submit">Registrarme</button>
+          
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
   
   
   
