--- a/FRONTEND/src/src/app/pages/usuarios/usuarios.component.html
+++ b/FRONTEND/src/src/app/pages/usuarios/usuarios.component.html
@@ -1,8 +1,8 @@
-<app-appbar></app-appbar>
-<main style="min-height: 80vh;">
-    <div class="container">
-        <app-view-usuarios></app-view-usuarios>
-    </div>
-  <br>
-</main>
+
+
+
+    <app-navbar></app-navbar>
+    <app-view-usuarios></app-view-usuarios>
+
+
 
