--- a/FRONTEND/src/src/app/components/view-usuarios/view-usuarios.component.html
+++ b/FRONTEND/src/src/app/components/view-usuarios/view-usuarios.component.html
@@ -1,11 +1,12 @@
-
-<ol class="list-group list-group-flush border-bottom scrollarea" *ngFor="let usu of arrayUsuarios">
-    <li href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-          <div class="fw-bold">{{usu.first_name}}</div>
-          {{usu.email}}
-        </div>
-        <a class="btn btn-warning me-3" type="button" routerLink="/usuario/{{usu.id}}/Alta" ><i class="fa-solid fa-pen-to-square"></i></a>
-        <a class="btn btn-danger" type="button"><i class="fa-solid fa-trash" ></i></a>
-      </li>
-</ol>
+<br><br><br>
+  <ol style="margin-top: 20px;" class="list-group list-group-flush border-bottom scrollarea" *ngFor="let usu of arrayUsuarios">
+      <li href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+            <div class="fw-bold">{{usu.first_name}}</div>
+            {{usu.email}}
+          </div>
+          <a class="btn btn-warning" type="button" routerLink="/usuario/{{usu.id}}/1" ><i class="fa-solid fa-pen-to-square"></i></a>
+          <a class="btn btn-success" type="button" routerLink="/usuario/{{usu.id}}/2" ><i class="fa-solid fa-eye" ></i></a>
+          <a class="btn btn-danger" type="button" routerLink="/usuario/{{usu.id}}/3" ><i class="fa-solid fa-trash" ></i></a>
+        </li>
+  </ol>
