--- a/FRONTEND/src/src/app/pages/home/home.component.html
+++ b/FRONTEND/src/src/app/pages/home/home.component.html
@@ -1,4 +1,3 @@
-<app-appbar></app-appbar>
-<body>
-    <app-view-poemas></app-view-poemas>
-</body>
+<app-navbar></app-navbar>
+<app-view-poemas></app-view-poemas>
+
