--- a/FRONTEND/src/src/app/components/navbar/navbar.component.html
+++ b/FRONTEND/src/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,9 @@
             <li *ngIf="isAdmin && isToken" class="nav-item">
                 <a href="usuarios" class="btn btn-dark">Usuarios</a>
             </li>
-          
+            <li *ngIf="isAdmin && isToken" class="nav-item">
+              <a href="poems" class="btn btn-dark">Poemas</a>
+          </li>
             
             
           </ul>
