--- a/FRONTEND/src/src/app/pages/poem/poem.component.html
+++ b/FRONTEND/src/src/app/pages/poem/poem.component.html
@@ -1,1 +1,9 @@
-<p>poem works!</p>
+<app-navbar></app-navbar>
+<br><br><br>
+<div class="container">
+    <!-- Componente vistas de usuario -->
+    <app-abm-poemas [tipoOperacion]="tipo_op" [poem_id]="poemas_id"></app-abm-poemas>
+    
+</div>
+
+
