--- a/FRONTEND/src/src/app/pages/poems/poems.component.html
+++ b/FRONTEND/src/src/app/pages/poems/poems.component.html
@@ -2,7 +2,7 @@
 <br><br><br>
 <div class="container">
     <!-- Componente vistas de usuario -->
-    <app-abm-poems [tipoOperacion]="tipo_op" [poem_id]="poem_id" ></app-abm-poems>
+    <app-view-poemas [tipoOperacion]="tipo_op" [poem_id]="poem_id" ></app-view-poemas>
     
 </div>
 
