--- a/FRONTEND/src/src/app/components/navbar/navbar.component.html
+++ b/FRONTEND/src/src/app/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
                 <a href="usuarios" class="btn btn-dark">Usuarios</a>
             </li>
             <li *ngIf="isAdmin && isToken" class="nav-item">
-              <a href="poems" class="btn btn-dark">Poemas</a>
+              <a href="poemas" class="btn btn-dark">Poemas</a>
           </li>
             
             
