--- a/FRONTEND/src/app/components/view-poemas-cards/view-poemas-cards.component.html
+++ b/FRONTEND/src/app/components/view-poemas-cards/view-poemas-cards.component.html
@@ -1,7 +1,7 @@
 <br><br><br>
 
 
-<div style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+<div style="display: flex; align-items: center; justify-content: center; flex-direction: column; z-index: 15;">
 
     <div *ngFor="let poema of arrayPoemas" class="card" style="width: 80vw; margin-bottom: 30px;">
       <h5 class="card-header">{{poema.title}}</h5>
