--- a/FRONTEND/src/app/pages/poems/poems.component.html
+++ b/FRONTEND/src/app/pages/poems/poems.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<br><br><br>
-<div class="container">
+<br><br>
+<div class="flotante">
     <!-- Componente vistas de usuario -->
     <app-view-poemas [tipoOperacion]="tipo_op" [poem_id]="poem_id" ></app-view-poemas>
     
