--- a/FRONTEND/src/app/pages/usuario/usuario.component.html
+++ b/FRONTEND/src/app/pages/usuario/usuario.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <br><br><br>
-<div class="container">
+<div class="flotante">
     <!-- Componente vistas de usuario -->
     <app-abm-usuario [tipoOperacion]="tipo_op" [user_id]="usuario_id" [user_name]="usuario_id "></app-abm-usuario>
     
