--- a/FRONTEND/src/app/components/abm-poemas/abm-poemas.component.html
+++ b/FRONTEND/src/app/components/abm-poemas/abm-poemas.component.html
@@ -9,12 +9,12 @@
       </div>
       <div class="card-body">
 
-        <p class="card-text">{{poem.id}}</p>
-  
-
+        <p class="card-text" style="color: black;">{{poem.id}}</p>
+        <p class="card-text">{{poem.title}}</p>
+        <p class="card-text">{{poem.content}}</p>
       </div>
       <div class="card-footer text-muted">
-        <button *ngIf="tipoOperacion == '1'" type="button" (click)="admin()" class="btn btn-warning">Cambiar permisos</button>
+       
         <button *ngIf="tipoOperacion == '3'" type="button" (click)="delete()" class="btn btn-danger">Eliminar</button>
         <a href="poemas" class="btn btn-success">Ir a poemas</a>
       </div>
