--- a/FRONTEND/src/app/components/view-poemas/view-poemas.component.html
+++ b/FRONTEND/src/app/components/view-poemas/view-poemas.component.html
@@ -1,9 +1,9 @@
-<br><br><br>
+<br><br>
   <ol style="margin-top: 20px;" class="list-group list-group-flush border-bottom scrollarea" *ngFor="let poe of arrayPoemas">
       <li href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
             <div class="fw-bold">{{poe.id}}</div>
-            {{poe.id}}
+            {{poe.title}}
           </div>
           <a class="btn btn-warning" type="button" routerLink="/poema/{{poe.id}}/1" ><i class="fa-solid fa-pen-to-square"></i></a>
           <a class="btn btn-success" type="button" routerLink="/poema/{{poe.id}}/2" ><i class="fa-solid fa-eye" ></i></a>
