--- a/FRONTEND/src/app/pages/home/home.component.html
+++ b/FRONTEND/src/app/pages/home/home.component.html
@@ -1,3 +1,13 @@
 <app-navbar></app-navbar>
-<app-view-poemas-cards></app-view-poemas-cards>
+<ng-particles
+    style="z-index: -10;"
+    [id]="id"
+    [options]="particlesOptions"
+    [particlesInit]="particlesInit"
+    (particlesLoaded)="particlesLoaded($event)"
+></ng-particles>
+
+<div class="flotante">
+    <app-view-poemas-cards ></app-view-poemas-cards>
+</div>
 
