--- a/FRONTEND/src/app/pages/poem/poem.component.html
+++ b/FRONTEND/src/app/pages/poem/poem.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <br><br><br>
-<div class="container">
+<div class="flotante">
     <!-- Componente vistas de usuario -->
     <app-abm-poemas [tipoOperacion]="tipo_op" [poem_id]="poemas_id"></app-abm-poemas>
     
