--- a/FRONTEND/src/app/pages/usuarios/usuarios.component.html
+++ b/FRONTEND/src/app/pages/usuarios/usuarios.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
-<app-view-usuarios></app-view-usuarios>
+<div class="flotante"><app-view-usuarios></app-view-usuarios></div>
+
 
 
 
