--- a/FRONTEND/src/styles.css
+++ b/FRONTEND/src/styles.css
@@ -114,7 +114,7 @@ p{
     width: 100%;
     height: 60%;
     text-align: center;
-    background-image: url("/images/thumb2-white-vintage-background-vintage-floral-pattern-gray-damask-pattern-floral-patterns-vintage-backgrounds.png");
+  
 }
 .conteiner1{
     background-color: rgb(250, 244, 244);
@@ -122,9 +122,13 @@ p{
     height: 100%;
     text-align: center;
     position: absolute;
-    background-image: url("/images/thumb2-white-vintage-background-vintage-floral-pattern-gray-damask-pattern-floral-patterns-vintage-backgrounds.png");
 }
 
+.flotante {
+    z-index: 15;
+    position: relative;
+  
+  }
 
 .btn-group{
     
