--- a/FRONTEND/src/app/pages/new-poem/new-poem.component.html
+++ b/FRONTEND/src/app/pages/new-poem/new-poem.component.html
@@ -12,6 +12,11 @@
           <label for="content">Contenido</label>
           <input formControlName="content"  placeholder="content" id="content" type="text" name="content" required="required"/>
         </div>
+
+        <div class="form-group"> 
+          <label for="content">Points</label>
+          <input formControlName="points"  placeholder="points" id="points" type="points" name="points" required="required"/>
+        </div>
         
         <div class="form-group">
           <button style="background-color: white; color: black;"  type="button" (click)="submit()">Crear Poema</button>
