--- a/FRONTEND/src/app/components/view-poemas-cards/view-poemas-cards.component.html
+++ b/FRONTEND/src/app/components/view-poemas-cards/view-poemas-cards.component.html
@@ -7,6 +7,8 @@
       <h5 class="card-header">{{poema.title}}</h5>
       <div class="card-body">
           <span style="font-size: 2rem;" class="card-text">{{poema.content}}</span>
+          <br>
+          <span style="font-size: 2rem;" class="card-text">Puntos: {{poema.point}}</span>
        <!--  <a href="#" class="btn btn-primary">Go</a> -->
       </div>
     </div>
